[project]
name = "rvasm"
version = "0.0.1"
description = "A simple RISC-V assembler written in Python"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Will Arden", email = "will.ardxn@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/will-arden/rvasm"
Source = "https://github.com/will-arden/rvasm"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
